--- a/blocks/todo/todo.css
+++ b/blocks/todo/todo.css
@@ -9,7 +9,7 @@
 /* Header */
 .todo-header {
   padding: 12px 16px;
-  background: #e60000;
+  background: var(--color-adobe-red);
   color: #fff;
 }
 
@@ -44,7 +44,7 @@
   width: 6px;
   height: 6px;
   border-radius: 50%;
-  background: #e60000;
+  background: var(--color-adobe-red);
   flex-shrink: 0;
   margin-top: 5px;
 }
